# fluxterm

./: .gitignore  AGENTS.md  ARCHITECTURE_V1.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/actions/setup-env/: action.yml
.github/workflows/: check.yml  release.yml
crates/cli/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: auth.rs  engine.rs  error.rs  host_key.rs  lib.rs  monitor.rs  proxy.rs  proxy_backend.rs  proxy_error_codes.rs  session.rs  sftp.rs  telemetry.rs  types.rs  util.rs
crates/openai/: Cargo.toml
crates/openai/src/: client.rs  error.rs  lib.rs  prompts.rs  telemetry.rs  types.rs
crates/rdp_core/: Cargo.toml
crates/rdp_core/src/: audio.rs  bridge.rs  cliprdr.rs  ironrdp_runtime.rs  keyboard.rs  lib.rs  protocol.rs  session_manager.rs
crates/rdp_runtime/: Cargo.toml
crates/rdp_runtime/src/: lib.rs  session_manager.rs
crates/tauri/: .example.env  .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/tauri/capabilities/: default.json  desktop.json
crates/tauri/icons/: icon.icns
crates/tauri/src/: config_paths.rs  events.rs  lib.rs  local_fs.rs  local_shell.rs  main.rs  profile_store.rs
crates/tauri/src/commands/: file.rs  local.rs  local_shell.rs  mod.rs  profile.rs  security.rs  sftp.rs  ssh.rs
docs/: README.md  ai-context-contract.md  file-open-v1-design.md  floating-panel-snapshot-pattern.md  history-and-autocomplete.md  local-shell-term-charset-propagation.md  openai-integration-design.md  persistence-design-pattern.md  proxy-performance-benchmark.md  rdp-audio-playback-investigation.md  rdp-keyboard-mapping.md  rdp-main-widget-subapp-split-design.md  rdp-subapp-design.md  roadmap.md  security-crypto-refactor-design.md  session-resource-monitor-design.md  settings-interaction-spec-v1.md  sftp-log-events.md  ssh-config-import-design.md  ssh-host-key-verification-design.md  ssh-profile-advanced-design.md  ssh-session-and-monitoring.md  telemetry-logging-spec.md  terminal-performance-benchmark.md  terminal-sftp-path-sync-design.md  terminal-split-workspace-design.md  theme-design-token-refactor-design.md  window-app-model.md
scripts/: compare-bench.ps1  count-code-lines.ts  proxy-bench.js  set-version.mjs  terminal-bench.ps1
src/: App.css  App.tsx  appInfo.ts  main.tsx  types.ts
src-tauri/: .example.env  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: ai_settings.rs  config_paths.rs  events.rs  lib.rs  local_shell.rs  main.rs  profile_secrets.rs  profile_store.rs  rdp.rs  rdp_profile_store.rs  remote_edit.rs  resource_monitor.rs  security_store.rs  serial.rs  serial_profile_store.rs  session_settings.rs  ssh_config_import.rs  ssh_host_keys.rs  ssh_profile_store.rs  state.rs  telemetry.rs  utils.rs
src-tauri/src/ai/: context.rs  mod.rs
src-tauri/src/commands/: ai.rs  file.rs  local.rs  local_shell.rs  mod.rs  profile.rs  proxy.rs  rdp.rs  remote_edit.rs  resource_monitor.rs  security.rs  serial.rs  sftp.rs  ssh.rs  system.rs  tunnel.rs
src-tauri/src/security/: crypto.rs  mod.rs  provider.rs  secret_store.rs  types.rs
src-tauri/src/security/providers/: embedded.rs  hardcoded.rs  mod.rs  system_keychain.rs  user_password.rs
src/app/: AppRoot.tsx  AppShell.tsx
src/app/panels/: buildPanels.tsx
src/app/theme/: buildTerminalTheme.ts  buildThemeCssVars.ts  themeContracts.ts  themePresets.ts
src/components/app/: BottomArea.css  BottomArea.tsx  FloatingShell.tsx  Workspace.css  Workspace.tsx
src/components/host/: HostPanel.tsx
src/components/layout/: ConfigModal.css  ConfigModal.tsx  Menus.tsx  TitleBar.tsx  WidgetContainer.tsx  WidgetSlot.tsx  WidgetTitleBar.css  WidgetTitleBar.tsx  WindowControls.tsx
src/components/log/: LogPanel.tsx
src/components/providers/: NoticesProvider.tsx
src/components/sftp/: SftpPanel.tsx
src/components/shared/: ContextMenu.tsx  Modal.tsx  PanelHeader.tsx
src/components/ui/: InputDialog.css  InputDialog.tsx  PathViewDialog.css  PathViewDialog.tsx  base-input.css  button.css  button.tsx  notice-host.css  notice-host.tsx  select-menu.tsx  select.css  select.tsx
src/constants/: aiProviders.ts  backgroundMedia.ts  builtinWallpapers.ts  hostGroups.ts  links.ts  localShellConfig.ts  persistence.ts  quickbar.ts  terminalBell.ts  terminalCursorStyle.ts  terminalWordSeparators.ts  windows.ts
src/features/ai/: types.ts
src/features/profile/: profileIcons.tsx
src/features/security/: types.ts
src/hooks/: terminalHostShortcuts.ts  useAiSettings.ts  useAiState.ts  useAppSettings.ts  useCommandHistoryState.ts  useDeferredEffect.ts  useDisableBrowserShortcuts.ts  useFloatingPanelSync.ts  useFloatingPanels.ts  useKeyedDraftState.ts  useLayoutState.ts  useMacAppMenu.ts  useNotices.tsx  useProfiles.ts  useQuickBarState.ts  useSecurity.ts  useSerialProfiles.ts  useSessionController.ts  useSessionSettings.ts  useSessionStateCore.ts  useSftpController.ts  useSftpDropUpload.ts  useSftpStateCore.ts  useSshTunnelState.ts  useTerminalController.ts  useTerminalRuntimeCore.ts
src/hooks/profile/: useProfiles.ts
src/hooks/session/: useSessionState.ts
src/hooks/settings/: useAiSettings.ts  useAppSettings.ts  useSessionSettings.ts
src/hooks/sftp/: useSftpState.ts
src/hooks/terminal/: useTerminalRuntime.ts
src/i18n/: en.ts  index.ts  zh.ts
src/layout/: model.ts  types.ts
src/main/: AppRoot.tsx  AppShell.tsx
src/main/components/: BottomArea.css  BottomArea.tsx  FloatingShell.tsx  Workspace.css  Workspace.tsx
src/main/config/: configNavigation.ts
src/main/hooks/: useAppUpdater.ts  useFloatingWidgetSync.ts  useFloatingWidgets.ts  useLayoutState.ts  useMacAppMenu.ts  usePreventBrowserDefaults.ts  useQuickBarState.ts  useSubApps.ts
src/main/theme/: buildTerminalTheme.ts  tokens.ts  (+3 more)
src/shared/: detachedWindowAppearance.ts
src/styles/: scrollbar.css
src/subapps/: SubAppRoot.tsx  SubAppShell.css  types.ts
src/utils/: format.ts  path.ts  platform.ts
(+131 files in other folders)
