[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/*",
]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2024"
authors = ["sfwwslm"]

[workspace.dependencies]
engine = { path = "crates/engine" }
openai = { path = "crates/openai" }

log = "0.4"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
tokio = "1"
uuid = "1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = { version = "0.57.1", default-features = false, features = ["flate2", "ring", "rsa"] }

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[profile.fast-release]
inherits = "release"
lto = false
strip = false
codegen-units = 256
opt-level = 3
