[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/*",
]

[workspace.package]
version = "0.1.0-beta.12"
edition = "2024"
authors = ["sfwwslm"]

[workspace.dependencies]
engine = { path = "crates/engine" }
openai = { path = "crates/openai" }

log = { version = "0.4.29" }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = { version = "0.15.7" }
tokio = { version = "1.50.0" }
uuid = { version = "=1.18.1" }
serde_json = { version = "1.0.149" }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
russh = { version = "0.59.0", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-config = { version = "0.58.0" }

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[profile.fast-release]
inherits = "release"
lto = false
strip = false
codegen-units = 256
opt-level = 3
