[package]
name = "fluxterm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "现代化的 Tauri 终端与 SSH/SFTP 桌面应用"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
engine = { workspace = true }
openai = { workspace = true }

tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true}
portable-pty = "0.8.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
rand = "0.9.2"
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
sysinfo = "0.38.3"
russh = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
