[package]
name = "fluxterm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "现代化的 Tauri 终端与 SSH/SFTP 桌面应用"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
engine = { workspace = true }
openai = { workspace = true }

tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-fs = { version = "2.4.5" }
tauri-plugin-dialog = { version = "2.6.0" }
tauri-plugin-opener = { version = "2.5.3" }
tauri-plugin-clipboard-manager = { version = "2.3.2" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true }
portable-pty = { version = "0.8.1" }
aes-gcm = { version = "0.10.3" }
argon2 = { version = "0.5.3" }
base64 = { version = "0.22.1" }
rand = { version = "0.9.2" }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
sysinfo = { version = "0.38.3" }
russh = { workspace = true }
russh-config = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2.10.0" }
tauri-plugin-window-state = { version = "2.4.1" }
