[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
serde = { workspace = true, features = ["derive"] }
russh = { workspace = true }
russh-sftp = "2.1.1"
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time", "io-util", "sync", "macros"] }
uuid = { workspace = true, features = ["v4"] }
log= { workspace = true }
regex = "1"
futures-util = "0.3"
