[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { version = "1.0.102" }
serde = { workspace = true, features = ["derive"] }
russh = { workspace = true }
russh-sftp = { version = "2.1.1" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time", "io-util", "sync", "macros"] }
uuid = { workspace = true, features = ["v4"] }
log= { workspace = true }
regex = { version = "1.12.3" }
futures-util = { version = "0.3.32" }
base64 = { version = "0.22.1" }
serde_json = { workspace = true }
