[package]
name = "rdp_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "FluxTerm RDP in-process runtime"

[dependencies]
axum = { version = "0.8.4", features = ["http1", "json", "tokio", "ws"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1.41"
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = "2.0.18"
hostname = "0.4.1"
base64 = "0.22.1"
png = "0.17.16"
ironrdp = { path = "../../target/IronRDP/crates/ironrdp", features = ["session", "input", "graphics", "dvc", "svc", "displaycontrol", "connector", "rdpsnd"] }
ironrdp-tls = { path = "../../target/IronRDP/crates/ironrdp-tls", package = "ironrdp-tls", features = ["rustls"] }
ironrdp-tokio = { path = "../../target/IronRDP/crates/ironrdp-tokio", package = "ironrdp-tokio", features = ["reqwest"] }
ironrdp-cliprdr = { path = "../../target/IronRDP/crates/ironrdp-cliprdr", package = "ironrdp-cliprdr" }
ironrdp-rdpdr = { path = "../../target/IronRDP/crates/ironrdp-rdpdr", package = "ironrdp-rdpdr" }
cpal = "0.17"
