[package]
name = "flux-term"
version = "0.1.0-alpha.1"
description = "A Tauri App"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flux_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
engine = { path = "../engine" }

tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-fs = { version = "2.4.5" }
tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = { version = "2.6.0" }
tauri-plugin-opener = { version = "2.5.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log= { version = "0.4" }
portable-pty = { version = "0.8.1" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { version = "2.4.1"}
